--- a/books/LaunchScreen.storyboard
+++ b/books/LaunchScreen.storyboard
@@ -1,7 +1,102 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="0CE-aq-y1l">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="tUr-H9-jd0">
+            <objects>
+                <viewController storyboardIdentifier="bookDetails" id="JqQ-RC-3bF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WYA-jp-rxm"/>
+                        <viewControllerLayoutGuide type="bottom" id="gZt-KU-Xlb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9gJ-PF-e9k">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aRZ-jV-lUr">
+                        <barButtonItem key="rightBarButtonItem" image="More" id="6yq-HH-hLs">
+                            <connections>
+                                <action selector="moreIsPressed:" destination="JqQ-RC-3bF" id="E3M-co-dLU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xXc-fH-JJ3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4069" y="837"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="uBN-lG-BWd">
+            <objects>
+                <splitViewController storyboardIdentifier="splitView" modalTransitionStyle="flipHorizontal" id="0CE-aq-y1l" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="JqQ-RC-3bF" kind="relationship" relationship="detailViewController" id="Hgr-p0-wAh"/>
+                        <segue destination="SVB-q7-KPp" kind="relationship" relationship="masterViewController" id="6cy-Q5-8nw"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Dq-Bv-9t8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4813" y="38"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="m4A-vE-w1L">
+            <objects>
+                <tableViewController storyboardIdentifier="bookTable" definesPresentationContext="YES" id="Brz-Ma-6yM" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Nz-Gt-Ewv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableFooterView" contentMode="redraw" placeholder="Search" id="gqm-vS-wUY">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="Brz-Ma-6yM" id="HN6-FD-XTy"/>
+                            <outlet property="delegate" destination="Brz-Ma-6yM" id="Jtt-K4-U5h"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="aZw-H1-2dY">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" id="AOk-NS-kgf">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Reading"/>
+                                <segment title="To Read"/>
+                                <segment title="Finished"/>
+                            </segments>
+                        </segmentedControl>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qjw-0h-Zuf"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lPb-0x-NkW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3130" y="-19"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1eW-Df-h6c">
+            <objects>
+                <navigationController storyboardIdentifier="navigationController" id="SVB-q7-KPp" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uqo-iZ-K4i">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Brz-Ma-6yM" kind="relationship" relationship="rootViewController" id="26G-dW-5Th"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qmG-JG-rmC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3993" y="-19"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="More" width="22" height="22"/>
+    </resources>
 </document>
